seifseit/assets/scss/custom.scss
/* Put custom SCSS rules in this file */
/* Documentation: https://sass-lang.com/documentation */

//@import 'variables.scss';
@import 'fontinclude.scss';


::selection {
    background-color: $primary-color;
    color:$light;
}

.listintro p {
    font-size:160%;
    font-style: oblique;
    font-weight: 200;
    color: $primary-color;
    text-shadow:$secondary-color 1px 0 10px;
    padding-bottom:2rem;
}
.gradient-line{ 
    margin: 0 0 50px 0;
    display: block;
    border: none;
    height: 1px;
    background: $primary-color;
    background: linear-gradient(to right, $light, $overlay, $primary-color, $overlay, $light);
}

// OVERWRITES 

// lists in the content area
ul {
    list-style-image: url("/images/globe-favicon.svg");
    padding-left: revert;
}
nav ul, ul.counter-box, div.project-details > ul, ul.widget-category-list, ul.address-block, ul.social-icons {
    list-style-type: none;
    list-style-image: none;
    padding-left: 0;
}

// inside a section with dark background
.bg-dark p { // <p/> inside a section with dark background
    color:$light;
}
.bg-dark a { // <a/> inside a section with dark background
    color:$secondary-color;
}


// start page: blurred section
section.feature.bg-2 > div > div > div {
    -webkit-backdrop-filter: blur(50px);
    backdrop-filter: blur(50px);
    padding:15px;

    p {
        color:$primary-color;
    }
}


// menu: language selector
.select-language {
    margin-left:3rem;
    width: 100%;
    cursor: pointer;

    select#select-language {
/*      -webkit-appearance:none;
        -moz-appearance:none;
        -ms-appearance:none;
        appearance:none; */
        outline: 0;
        background: $light;
        border: none;
        color: #5c5c5c;
        padding: 10px 15px;
        margin: 0px;
        font-weight: 500;
        font-size: 14px;
        text-transform: uppercase;
    }
}

// 
.about .about-img img:hover {
    opacity: 1;
}


// PUBLICATIONS ============

.pub-item {
    margin-top: 24px;
    //display:list-item;
    list-style-position:inside;
    list-style-type: "";
    display:list-item;
    width:100%;
}
.pub-item-author {
    color:$secondary-color;
    display:inline-block;
}
.pub-item-title {
    font-size: 124%;
}
@mixin pub-bullet-style() {
    color:$secondary-color;
    display: inline-block;
    font-family: "Ionicons";
  }
div.pub-Contribution::marker {
    content: "\f401";
    @include pub-bullet-style();
}
div.pub-Paper::marker {
    content: "\f2bf";
    @include pub-bullet-style();
}
div.pub-Talk::marker {
    content: "\f461";
    @include pub-bullet-style();
}
div.pub-Poster::marker {
    content: "\f3ca";
    @include pub-bullet-style();
}
div.pub-Book::marker {
    content: "\f3e8";
    @include pub-bullet-style();
}

.pub-filter .btn-group label {
    display: inline-block;
    border: 1px solid #dedede;
    padding: 8px 25px;
    cursor: pointer;
    font-size: 15px;
    color: #837f7e;
    outline: 0;
    background: $light;
    margin: 2px;
    border-radius: 0;
    transition: all .3s ease;

    .focus, .hover, :hover  {
        color: #08083f;
        background: rgba(8,8,63,.3);
        border: 1px solid rgba(8,8,63,.3);
    }
}

// INFOTIPS used in the publication list ================
.infotip {
    position: relative;
  }
  
  // Tooltip text
  .infotip .infotiptext {
    visibility: hidden;
    background-color: $light;
    color: $secondary-color;
    text-align: right;
    padding: 5px 0;
    border-radius:6px;
   
    // Position the tooltip text - see examples below!
    position: absolute;
    z-index: 1;
    top: -5px;
    right: 105%;
  }
  
  // Show the tooltip text when you mouse over the tooltip container
  .infotip:hover span.infotiptext {
    visibility: visible;
  }

// ICONS ==========================================
.icon-seifseit-xing {
    background: center/20px url('/images/ico_xing.svg');
    height: 20px;
    width: 20px;
    display: block;
    /* Other styles here */
}

.icon-seifseit-medium {
    background: center/20px url('/images/ico_medium.svg');
    height: 20px;
    width: 20px;
    display: block;
    /* Other styles here */
}

.icon-seifseit-researchgate {
    background: center/20px url('/images/ico_researchgate.svg');
    height: 20px;
    width: 20px;
    display: block;
    /* Other styles here */
}

// BUTTONS ========================================
.btn-light {
    border: 1px solid $secondary-color;
    border-radius: 0;

    &:hover {
        background-color: $secondary-color;
        color: $light;
    }
}

